fixed polls text spacing issue

--- a/polls.css
+++ b/polls.css
@@ -7,8 +7,10 @@ body {
 }
 
 #no-polls-message {
-  text-align: center;
-  width: 100%;
+    text-align: center;
+    width: 100%;
+    margin-top: 0;
+    margin-bottom: 0;
 }
 
 #poll-creation-overlay {
@@ -303,7 +305,7 @@ body {
     flex-direction: column;
     align-items: center;
     gap: 12px;
-    margin-top: 5px;
+    margin-top: 0;
     width: 100%;
 }
 
